--- a/angular.json
+++ b/angular.json
@@ -25,11 +25,13 @@
             "styles": [
               "src/styles.css",
               "./node_modules/owl.carousel/dist/assets/owl.carousel.css",
-              "./node_modules/owl.carousel/dist/assets/owl.theme.default.css"
+              "./node_modules/owl.carousel/dist/assets/owl.theme.default.css",
+              "./src/assets/css/grid-gallery.min.css"
             ],
             "scripts": [
               "./node_modules/jquery/dist/jquery.js",
-              "./node_modules/owl.carousel/dist/owl.carousel.js"
+              "./node_modules/owl.carousel/dist/owl.carousel.js",
+              "./src/assets/js/grid-gallery.min.js"
             ]
           },
           "configurations": {
