--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "angular2-image-gallery": "^6.0.2",
     "core-js": "^2.5.4",
+    "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
     "ng2-owl-carousel": "^0.1.15",
     "ngx-owl-carousel": "^2.0.7",
