updated package json

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "test": "ng test",
         "lint": "ng lint",
         "e2e": "ng e2e",
-        "postinstall": "ng build --aot -prod && npm run start"
+        "postinstall": "ng build --aot  -prod"
     },
     "private": true,
     "dependencies": {
@@ -30,7 +30,9 @@
         "owl.carousel": "^2.3.4",
         "path": "^0.12.7",
         "rxjs": "^6.0.0",
-        "zone.js": "^0.8.26"
+        "zone.js": "^0.8.26",
+        "@angular/cli": "~6.0.8",
+        "@angular/compiler-cli": "^6.0.3"
     },
     "devDependencies": {
         "@angular/compiler-cli": "^6.0.3",
