--- a/package.json
+++ b/package.json
@@ -54,5 +54,9 @@
         "protractor": "~5.3.0",
         "ts-node": "~5.0.1",
         "tslint": "~5.9.1"
+    },
+    "engines": {
+        "node": "6.11.1",
+        "npm": "5.5.1"
     }
 }
